<resources>
    <string name="app_name">FlashCards</string>
    <string name="add_wordlist">Add Wordlist</string>
    <string name="help">Help</string>
    <string name="your_flashcard_decks">Your Flashcard Decks</string>
    <string name="name_your_deck">Name your deck</string>
    <string name="vocab_hint">e.g. My Spanish Vocab</string>
    <string name="json_url_or_file_path">JSON URL or File Path</string>
    <string name="wordfile_hint">https://example.com/words.json</string>
    <string name="word">Word</string>
    <string name="_0_0">0 / 0</string>
    <string name="restart">Restart</string>
    <string name="ReturnMain">Main menu</string>
    <string name="lang_source">Source language</string>
    <string name="lang_destination">Destination language</string>
    <string name="lang_arrow">&#160;&#160;—></string>
    <string name="btnSwitch">Switch</string>
    <string name="edit_word">Edit word</string>
    <string name="star_word">Star word</string>
    <string name="delete_word">Delete word</string>
    <string name="arrow_left">&#160;&lt;—&#160;</string>
    <string name="arrow_right">&#160;—>&#160;</string>
    <string name="switch_language">Switch language</string>
    <string name="add_characters">Add Characters</string>
    <string name="character_name_e_g_a_hi">Character Name (e.g. \'a\', \'hi\')</string>
    <string name="record_stroke_order">Record stroke order</string>
    <string name="record_stroke_direction">Record stroke direction</string>
    <string name="draw_character_below">Draw character below:</string>
    <string name="character_thickness">Thickness:</string>
    <string name="undo_character">Undo</string>
    <string name="redo_character">Redo</string>
    <string name="clear_character">Clear</string>
    <string name="save_character">Save</string>
    <string name="finish_and_return_character">Finish and Return</string>
    <string name="draw_character_name">Draw: Character Name</string>
    <string name="thickness_character">Thickness:</string>
    <string name="clear_drawing">Clear</string>
    <string name="check_character">Check</string>
    <string name="next_character">Next</string>
    <string name="restart_character_quiz">Restart</string>
    <string name="exit_character">Exit</string>
    <string name="undo">Undo</string>
    <string name="new_character">New Character</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
</resources>