<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_your_deck"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDeckName"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:hint="@string/vocab_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/json_url_or_file_path"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editJsonPath"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:hint="@string/wordfile_hint" />

</LinearLayout>