<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="42dp"
    android:paddingTop="32dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCounter"
        app:layout_constraintWidth_max="500dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvLanguageSrc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_source"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvLanguageArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_arrow"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvLanguageDst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/lang_destination"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnHome"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/ReturnMain"
                    android:src="@drawable/ic_menu_home" />

                <ImageButton
                    android:id="@+id/btnRestart"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/restart"
                    android:src="@android:drawable/ic_menu_rotate"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/btnSwitch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/switch_language"
                    android:src="@drawable/ic_swap" />

                <ImageButton
                    android:id="@+id/btnEdit"
                    android:layout_marginTop="32dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_word"
                    android:src="@android:drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/btnStar"
                    android:layout_marginTop="32dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/star_word"
                    android:src="@android:drawable/btn_star_big_off" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/delete_word"
                    android:src="@android:drawable/ic_menu_delete"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvWord"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/word"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/llNavigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llActions"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/llNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPrevious"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/arrow_left" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNext"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/arrow_right" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>